{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "Player",
            "id": "130752d3-639b-4179-83fa-3178b21fd7af",
            "actions": [
                {
                    "name": "PlayerMove",
                    "type": "Button",
                    "id": "a56f70d8-0527-4791-8aa5-05d29ddd4e62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlayerJump",
                    "type": "Button",
                    "id": "1a78270a-b507-4e86-86b8-c252ef06d939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlayerShoot",
                    "type": "Button",
                    "id": "b2e81ea6-9334-410e-9473-43e5e1d370d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "0bd4712b-058e-4c7f-a7f8-8daef0e3d5ee",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1fccafba-62b4-4b06-bf54-8d0c92a08c2a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fef0e0d0-9795-42f7-ae92-ca5cb8553ce6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "33785b21-d6d0-436f-abf7-98f01120049f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "387f94c2-71a3-43f6-ae1b-57e062c2eddd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}